hexagonal-architecture/hexagonal-infrastructure/src/main/java/com/example/hexagonalarchitecture/global/error/GlobalExceptionHandler.java
package com.example.hexagonalarchitecture.global.error;

import jakarta.validation.ConstraintViolationException;
import org.springframework.http.HttpStatus;
import org.springframework.http.ResponseEntity;
import org.springframework.validation.BindException;
import org.springframework.validation.FieldError;
import org.springframework.web.bind.annotation.ExceptionHandler;
import org.springframework.web.bind.annotation.RestControllerAdvice;

import java.util.HashMap;
import java.util.Map;

@RestControllerAdvice
public class GlobalExceptionHandler {

    @ExceptionHandler(BindException.class) // 타입 캐스팅 에러
    public ResponseEntity<Map<String, String>> bindException(BindException e) {
        Map<String, String> errorMap = new HashMap<>();

        for(FieldError error : e.getFieldErrors()) {
            errorMap.put(error.getField(), error.getDefaultMessage());
        }

        return new ResponseEntity<>(errorMap, HttpStatus.BAD_REQUEST);
    }
}
